# agent-task-runner

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  loop-ci.yml
.loop/: config.json
.loop/examples/: task_card.json
.loop/logs/: feed.jsonl
.loop/tasks/: README.md
.loop/templates/: reviewer_prompt.txt  worker_prompt.txt
docs/roles/: code-writer.md  reviewer.md
src/loop_kit/: __init__.py  __main__.py  cli.py  orchestrator.py
src/loop_kit/defaults/: __init__.py  agents_md_default.txt  code_writer_md_default.txt  facts.jsonl  patterns.jsonl  pitfalls.jsonl  reviewer_md_default.txt
tests/: test_concurrency.py  test_integration.py  test_orchestrator.py
